@@ -1,3 +1,10 @@
+2015-12-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmain.c:
+	  Always use preprocessor in standard mode.
+	* device/include/stdlib.h:
+	  Fix declaration order for inlined aligned_alloc().
+
 2015-12-17 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* Makefile.in
